# micropython-rs

./: .gitmodules  Cargo.toml  README.md
micropython/: Cargo.toml
micropython/pkg/sumdb/sum.golang.org/: latest
micropython/src/: lib.rs
micropython_src/: Cargo.toml
micropython_src/data/: qstr_ident_translations.json5  static_qstrs.json5  unsorted_qstrs.json5
micropython_src/src/: lib.rs  module.rs  qstr.rs
micropython_src/templates/: moduledefs.h.tmpl  mpconfigport.h.tmpl  mphalport.h.tmpl  qstr.rs.tmpl  qstrdefs.generated.h.tmpl
micropython_sys/: Cargo.toml  build.rs
micropython_sys/src/: lib.rs
testcrate/: Cargo.toml  build.rs
testcrate/src/: main.rs
