[package]
name = "micropython_src"
version = "0.1.0"
edition = "2021"
exclude = [
    "third_party/micropython/docs/*",
    "third_party/micropython/drivers/*",
    "third_party/micropython/examples/*",
    "third_party/micropython/ports/*",
    "third_party/micropython/tests/*",
    "third_party/micropython/tools/*",
]

[dependencies]
cc = "1.0.54"
handlebars = "6.0.0"
json5 = "0.4.1"
path-slash = "0.2.1"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
